--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,20 @@
+body{
+    margin: 0;
+    padding: 0;
+}
+.raleway-normal {
+  font-family: "Raleway", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.inter-normal {
+  font-family: "Inter", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 900;
+  font-style: normal;
+}
 nav ul{
     display: flex; 
     align-items: center;
@@ -14,11 +31,26 @@ nav ul{
     color: white;
     padding: 18px 35 px;
     border-radius: 10px;
-
+    border: none;
 }
 nav ul a{
     text-decoration: none;
     color: #4E47FF;
     font-weight: 900;
     font-size: 34;
+}
+
+.header{
+    background-image: url(/Assets/Hero-bg.png);
+    height: 100%;
+    width: 100%;
+    background-position: top;
+}
+.banner{
+    text-align: center;
+    padding: 0px 250px 150px;
+}
+.banner-title{
+    font-size: 65px;
+    font-weight: bold;
 }
