--- a/styles.css
+++ b/styles.css
@@ -2,17 +2,24 @@ body{
     margin: 0;
     padding: 0;
 }
-.raleway-normal {
+.raleway-normal{
   font-family: "Raleway", sans-serif;
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
 }
 
-.inter-normal {
+.inter-bolder{
   font-family: "Inter", sans-serif;
   font-optical-sizing: auto;
   font-weight: 900;
+  font-style: normal;
+}
+
+.inter-normal{
+  font-family: "Inter", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
   font-style: normal;
 }
 nav ul{
@@ -74,4 +81,30 @@ header{
     border: none;
     border-radius: 20px;
 
+}
+
+.productive{
+    margin: 0px 150px;
+    padding: 50px 150px;
+    max-width: 1140px;
+    max-height: 300px;
+    background-color: rgb(78, 71, 255, 0.1);
+    text-align: center;
+    border-radius: 10px;
+}
+
+.productive-cards{
+    display: flex;
+    justify-content: space-between;
+}
+
+.productive-title{
+    font-size: 80;
+    font-weight: 900;
+    color: #4E47FF;
+}
+.productive-sub{
+    font-size: 20px;
+    counter-reset: #000000;
+    opacity: 50%;
 }
