--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@ body{
   font-weight: 400;
   font-style: normal;
 }
-nav ul{
+.head-nav{
     display: flex; 
     align-items: center;
     list-style: none;
@@ -40,7 +40,7 @@ nav ul{
     border-radius: 10px;
     border: none;
 }
-nav ul a{
+.head-btn{
     text-decoration: none;
     color: #4E47FF;
     font-weight: 900;
@@ -114,18 +114,44 @@ header{
     display: flex;
     justify-content: space-between;
     align-items: center;
-
+    background-color: rgba(214, 221, 237, 0.5);
+    min-height: 300px;
+}
 .touch-title{
     font-weight: bold;
     font-size: 97px;
     width: 50%;
 }
 
-}
+
 .form-touch *{
     display: block;
     margin-bottom: 10px;
 }
 .form-touch label{
-    font-size: 18;
+    font-size: 18px;
+}
+
+footer{
+    max-width: 70%;
+    text-align: center;
+    margin: 100px 450px;
+    align-items: center;
+}
+.footer-title{
+    color: #4E47FF;
+    font-size: 100px;
+}
+.footer-sub{
+    color: #8987A1;
+}
+.foot-nav{
+    display: flex; 
+    align-items: center;
+    list-style: none;
+    justify-content: space-between;
+}
+.foot-links{
+    text-decoration: none;
+    color: #8987A1;
 }
